--- a/src/mongo/db/modules/enterprise/src/magic_restore/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/magic_restore/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -55,5 +55,27 @@ mongo_cc_library(
         "//src/mongo/db/s:sharding_catalog_manager",
         "//src/mongo/db/storage:record_store_base",
         "//src/mongo/util/options_parser",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "magic_restore_test",
+    srcs = [
+        "magic_restore_test.cpp",
+    ],
+    data = ["bson_reader_test_data/sample_cloud_oplogs"],
+    tags = ["mongo_unittest_fourth_group"],
+    deps = [
+        ":magic_restore",
+        "//src/mongo/db:service_context_d",
+        "//src/mongo/db:service_context_d_test_fixture",
+        "//src/mongo/db:shard_role",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/repl:oplog",
+        "//src/mongo/db/repl:oplog_entry",
+        "//src/mongo/db/repl:replmocks",
+        "//src/mongo/db/repl:storage_interface_impl",
+        "//src/mongo/db/s:sharding_catalog_manager",
+        "//src/mongo/db/storage:storage_options",
     ],
 )
