--- a/src/mongo/db/modules/enterprise/src/encryptdb/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/encryptdb/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -229,5 +229,33 @@ mongo_cc_unit_test(
         "//src/mongo/db/auth:security_file",
         "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
         "//src/mongo/util/net:network",
+    ],
+)
+
+mongo_cc_binary(
+    name = "mongodecrypt",
+    srcs = [
+        "decrypt_tool.cpp",
+        "decrypt_tool_options.cpp",
+        "decrypt_tool_options.h",
+        "decrypt_tool_options_gen",
+        "encrypted_data_protector.h",
+        "//src/mongo/db/storage:data_protector.h",
+    ],
+    # env.WindowsResourceFile("decrypt_tool.rc"),
+    tags = [
+        "dist_test",
+    ],
+    deps = [
+        "key_acquisition",
+        "symmetric_crypto_enterprise",
+        "//src/mongo/crypto:symmetric_crypto",
+        "//src/mongo/db:log_process_details",
+        "//src/mongo/db:server_base",
+        "//src/mongo/db/concurrency:lock_manager",
+        "//src/mongo/db/modules/enterprise/src/kmip",
+        "//src/mongo/util:signal_handlers",
+        "//src/mongo/util:version_impl",
+        "//src/mongo/util/options_parser:options_parser_init",
     ],
 )
