--- a/src/mongo/db/modules/enterprise/src/ldap/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/ldap/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -286,5 +286,36 @@ mongo_cc_unit_test(
         "//src/mongo/executor:thread_pool_task_executor_test_fixture",
         "//src/mongo/idl:server_parameter_test_util",
         "//src/mongo/util:clock_source_mock",
+    ],
+)
+
+mongo_cc_binary(
+    name = "mongoldap",
+    srcs = [
+        "ldap_tool.cpp",
+        "ldap_tool_options.cpp",
+        "ldap_tool_options.h",
+        "ldap_tool_options_gen",
+    ],
+    # + env.WindowsResourceFile("ldap_tool.rc"),
+    tags = [
+        "dist_test",
+    ],
+    deps = [
+        "ldap_manager",
+        "ldap_manager_impl",
+        "ldap_options_mongod",
+        "ldap_query",
+        "//src/mongo:base",
+        "//src/mongo/base:secure_allocator",
+        "//src/mongo/client:native_sasl_client",
+        "//src/mongo/db:log_process_details",
+        "//src/mongo/db:service_context_non_d",
+        "//src/mongo/db/modules/enterprise/src/util:report_tool",
+        "//src/mongo/util:dns_query",
+        "//src/mongo/util:signal_handlers",
+        "//src/mongo/util:version_impl",
+        "//src/mongo/util/net:http_client_impl",
+        "//src/mongo/util/options_parser:options_parser_init",
     ],
 )
