SERVER-96440 Implement Audit Benchmark (#29254)
Implements audit benchmark fixture and actual benchmarks. 

Right now this runs the following benchmarks:

```
// Benchmarks setting a metadata BSONElement into a Client.
 bmConstructClientMetadata

// Benchmarks logging the metadata of a client.
 bmLogClientMetadata

// Benchmarks creating an audit event and storing it as a BSONObj.
bmCreateBSONObjAudit

// Benchmarks setting impersonation Client Metadata in an AuthorizationSession
bmSetImpersonationClien

// Benchmarks logging the metadata of an impersonated client.
bmLogImpersonatedClientMetadata
```

Most interesting finds from my runs (ubuntu2204-workstation-arm64 and
DEBUG build):
1. Adding impersonation is ~27% slower to the final cost of logging
using AuditMongo and ~34% slower for OCSF.
2. OCSF is generally about ~20% slower than normal logs.
3. For file logging, BSON is about ~83% faster than JSON.
4. No auditing vs the fastest configuration (BSON File) is about an
extra of 29727 nanoseconds per log operation.

--- a/src/mongo/db/modules/enterprise/src/audit/SConscript
+++ b/src/mongo/db/modules/enterprise/src/audit/SConscript
@@ -30,3 +30,18 @@ env.BazelProgram(
     source=[],
     AIB_COMPONENT="standalone-console-test",
 )
+
+env.Benchmark(
+    target="audit_bm",
+    source=[
+        "audit_bm.cpp",
+        "audit_bm_fixture.cpp",
+    ],
+    LIBDEPS=[
+        "$BUILD_DIR/mongo/db/audit",
+        "$BUILD_DIR/mongo/db/auth/authmocks",
+        "$BUILD_DIR/mongo/transport/transport_layer_mock",
+        "$BUILD_DIR/mongo/unittest/unittest",
+        "audit_enterprise",
+    ],
+)
