SERVER-98679 Add --nobest flag to dns docker container (#30542)
Adds a flag `--nobest ` were if for any reason the latest version of a
dependency cant be obtained it will fall back to an older version.

This would have prevented
[BF-36027](https://jira.mongodb.org/browse/BF-36027) where it couldn't
pull the latest version of a dependency and it kept trying for 2 hours.

Also fixes a bug in the `retry` where the counter wasn't incremented
becoming an infinite loop.

--- a/src/mongo/db/modules/enterprise/jstests/external_auth/lib/ldap_dns/Dockerfile
+++ b/src/mongo/db/modules/enterprise/jstests/external_auth/lib/ldap_dns/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y curl dnsmasq dnsutils
 
 # Per https://developers.redhat.com/blog/2020/03/24/red-hat-universal-base-images-for-docker-users#introducing_red_hat_universal_base_images
 FROM registry.access.redhat.com/ubi8/ubi:latest
-RUN dnf update -y && dnf install -y dnsmasq libatomic bind-utils
+RUN dnf update -y --nobest && dnf install -y dnsmasq libatomic bind-utils
 
 #else
 
