SERVER-98740 Convert additional targets from SCons to Bazel (#30601)
Convert the following tests from SCons to Bazel:

*
src/mongo/db/modules/enterprise/src/streams/util/tests/metric_manager_test
* src/mongo/db/query/search/mongot_cursor_test
* src/mongo/db/query/search/search_task_executors_integration_test
* src/mongo/db/query/virtual_collection/virtual_collection_test
* src/mongo/db/query/write_ops/db_ops_test
* src/mongo/db/query/db_ops_integration_test
* src/mongo/db/views/db_views_test
* src/mongo/s/multi_statement_transaction_requests_sender_test
* src/mongo/util/concurrency/ticketholder_test
* src/mongo/util/net/network_interface_ssl_test
* src/mongo/watchdog/watchdog_test

Additionally remove a redundant SCons test declaration for the target
src/mongo/s/query/exec/s_query_exec_test

--- a/src/mongo/db/modules/enterprise/src/streams/util/tests/SConscript
+++ b/src/mongo/db/modules/enterprise/src/streams/util/tests/SConscript
@@ -6,11 +6,6 @@ env = env.Clone()
 
 env.CppUnitTest(
     target="metric_manager_test",
-    source=[
-        "metric_manager_test.cpp",
-    ],
-    LIBDEPS=[
-        "$BUILD_DIR/mongo/base",
-        "../streams_util",
-    ],
+    source=[],
+    LIBDEPS=[],
 )
