--- a/src/mongo/db/modules/enterprise/src/streams/util/tests/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/util/tests/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -7,4 +7,16 @@ exports_files(
         "*.h",
         "*.cpp",
     ]),
+)
+
+mongo_cc_unit_test(
+    name = "metric_manager_test",
+    srcs = [
+        "metric_manager_test.cpp",
+    ],
+    tags = ["mongo_unittest_first_group"],
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db/modules/enterprise/src/streams/util:streams_util",
+    ],
 )
