--- a/src/mongo/db/modules/enterprise/src/audit/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/audit/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_benchmark", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -351,5 +351,21 @@ mongo_cc_binary(
         "//src/mongo:base",
         "//src/mongo/db:audit",
         "//src/mongo/unittest:unittest_main",
+    ],
+)
+
+mongo_cc_benchmark(
+    name = "audit_bm",
+    srcs = [
+        "audit_bm.cpp",
+        "audit_bm_fixture.cpp",
+        "audit_bm_fixture.h",
+    ],
+    deps = [
+        "audit_enterprise",
+        "//src/mongo/db:audit",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/transport:transport_layer_mock",
+        "//src/mongo/unittest",
     ],
 )
