--- a/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
@@ -81,6 +81,11 @@ env.CppUnitTest(
 )
 
 env.CppUnitTest(
+    target="processing_time_windows_test",
+    source=[],
+)
+
+env.CppUnitTest(
     target="stream_stats_test",
     source=[],
 )
