SERVER-98180 Move backup/restore codeowner to server-backup-restore (#30718)
Change codeowners of backup/restore to be `server-backup-restore`
instead of `server-rss-sydney`

--- a/src/mongo/db/modules/enterprise/jstests/hot_backups/OWNERS.yml
+++ b/src/mongo/db/modules/enterprise/jstests/hot_backups/OWNERS.yml
@@ -2,7 +2,7 @@ version: 1.0.0
 filters:
   - "*":
     approvers:
-      - 10gen/server-rss-sydney
+      - 10gen/server-backup-restore
   - "magic_restore*":
     approvers:
       - 10gen/server-replication
